# mcp-ga4

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  SETUP.md  client_secret.json.template  credentials.json.template  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.agent/rules/: code-reference.md  package-managing-and-envs.md
auth/: google_auth.py  scopes.py  service_decorator.py
core/: __init__.py  server.py  utils.py
ga4/: __init__.py  ga4_tools.py
src/mcp_ga/: __init__.py  auth.py  prompts.py  resources.py  server.py  tools.py  utils.py
src/mcp_ga4/: auth.py  models.py  prompts.py  resources.py  server.py  tools.py  utils.py
